--- a/package.json
+++ b/package.json
@@ -4,33 +4,20 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "npx vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "bcryptjs": "^3.0.2",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.525.0",
-    "mongoose": "^7.8.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.5.0",
-    "react-router-dom": "^7.7.0",
-    "tailwind-merge": "^3.3.1"
+    "class-variance-authority": "^0.7.1"
   },
   "devDependencies": {
-    "@types/node": "^24.0.10",
-    "@types/react-icons": "^2.2.7",
-    "@vitejs/plugin-react": "^4.6.0",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17",
+    "vite": "^5.0.0",
     "typescript": "^5.0.0",
-    "vite": "^7.0.2"
+    "tailwindcss": "^3.4.0",
+    "postcss": "^8.4.0",
+    "autoprefixer": "^10.4.0"
   }
 }
+
