--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "start": "react-scripts start",
     "dev": "vite",
     "build": "npx vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
+    "mongoose": "^8.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
@@ -21,6 +27,6 @@
     "postcss": "^8.4.0",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.0.0",
-    "vite": "^5.0.0"
+    "vite": "^7.0.6"
   }
 }
