Fix IntroPage: hardcode API URL for login/signup

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb://127.0.0.1:27017/oneth-auth
+MONGO_URI=mongodb+srv://lyochimasaga309:MASAGAMM19@onethcorp.txakcjs.mongodb.net/?retryWrites=true&w=majority&appName=onethcorp
 PORT=5000
