--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "g": "^2.0.1",
     "lucide-react": "^0.539.0",
     "mongoose": "^8.17.0",
-    "node": "^24.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
@@ -33,5 +32,8 @@
     "tailwindcss": "^3.4.0",
     "typescript": "^5.0.0",
     "vite": "^7.1.2"
-  }
+  },
+  "engines": {
+  "node": "22.x"
+}
 }
